Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 <li>Индонезийский (Indonesian)</li>
 <li>Греческий (Greek) </li>
 <li>Турецкий (Turkish)</li>
+<li>Китайский(Chinese)</li>
 </ul><h3>
 <a name="%D0%A1%D0%BA%D1%80%D0%B8%D0%BD%D1%88%D0%BE%D1%82%D1%8B" class="anchor" href="#%D0%A1%D0%BA%D1%80%D0%B8%D0%BD%D1%88%D0%BE%D1%82%D1%8B"><span class="octicon octicon-link"></span></a>Скриншоты</h3>
 
